update slick slider

--- a/index.html
+++ b/index.html
@@ -277,26 +277,21 @@
 
                             <div
                                 class="col-lg-5 mt_12 col-12 d-flex flex-column justify-content-center align-items-center-lg">
-                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Manage Your <span
-                                        class="text-color">Customer
-                                        Queues</span>
+                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Sell your products
+                                    and <span class="text-color">services with ease</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
-                                    designed to
-                                    allow
-                                    your customers to sign up for walk-in appointments and select
-                                    the services they want ahead of time. The queue will provide them with estimated
-                                    wait times, costs and will allow them
-                                    to even select their preferred stylist.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D POS solution is designed to
+                                    allow our clients to commence their sales process by creating products and
+                                    services with an intuitive and clean product management database. Group products and
+                                    services the way you want to see
+                                    them, and combine them into packages for customers to purchase seamlessly.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
-                                    or smaller, its
-                                    easy to
-                                    monitor
-                                    your operations and understand when wait periods are getting
-                                    too long to service your customer base and to better resource your stores during
-                                    busy periods. Beat the frustration of
-                                    your customers ahead of time and help manage how they wait for your services
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">When operating in a
+                                    service based environment that could include many services and products, the POS
+                                    system allows the
+                                    operates to take a job ticket, filled with items and transition this into a seamless
+                                    swipe and pay interface for the
+                                    client. Get your clients in and out the door faster than ever!
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
@@ -317,25 +312,23 @@
                             </div>
                             <div
                                 class="col-lg-5 mt_12 col-12 d-flex flex-column justify-content-center align-items-center-lg">
-                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Manage Your <span
-                                        class="text-color">Customer Queues</span>
+                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Manage Your team
+                                    <span class="text-color">with visibility</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
-                                    designed to
-                                    allow
-                                    your customers to sign up for walk-in appointments and select
-                                    the services they want ahead of time. The queue will provide them with estimated
-                                    wait times, costs and will allow them
-                                    to even select their preferred stylist.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D Barber Management solution is
+                                    designed for our clients to manage their staff remotely through a clean and
+                                    presentable interface. Develop rosters for your staff with a workflow that allows
+                                    staff to apply for time off and leave
+                                    and go through an approval process that automatically updates the roster
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
-                                    or smaller, its
-                                    easy to
-                                    monitor
-                                    your operations and understand when wait periods are getting
-                                    too long to service your customer base and to better resource your stores during
-                                    busy periods. Beat the frustration of
-                                    your customers ahead of time and help manage how they wait for your services
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">Through our job ticket
+                                    system, it is easy to see what staff is working on at any moment in time and analyse
+                                    the past to
+                                    measure the efficiency of staff members work habits. You staff can effortless start
+                                    and stop work, and tracking the
+                                    utilisation of your team is done seamlessly within the reporting system. Take
+                                    control of your team, and learn more about
+                                    what they are doing, and how it is impacting your business.
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
@@ -351,26 +344,16 @@
 
                             <div
                                 class="col-lg-5 mt_12 col-12 d-flex flex-column justify-content-center align-items-center-lg">
-                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Manage Your <span
-                                        class="text-color">Customer
-                                        Queues</span>
+                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Understand your
+                                    <span class="text-color">Customers</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
-                                    designed to
-                                    allow
-                                    your customers to sign up for walk-in appointments and select
-                                    the services they want ahead of time. The queue will provide them with estimated
-                                    wait times, costs and will allow them
-                                    to even select their preferred stylist.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D Timesheet system is designed to allow your employees to accurately record their working time for the day
+                                against jobs or tasks. This data is recorded down to the minute to allow for the most accurate information to provide
+                                your payroll provider, review performance, or maximize utilization.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
-                                    or smaller, its
-                                    easy to
-                                    monitor
-                                    your operations and understand when wait periods are getting
-                                    too long to service your customer base and to better resource your stores during
-                                    busy periods. Beat the frustration of
-                                    your customers ahead of time and help manage how they wait for your services
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">Accurate timesheet entry and data is critical to understanding your labor costs, requirements, and efficiencies to
+                                better run your business. Start making it easier for your staff to record their time so Maitre D can make it easier to
+                                manage your staff.
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
@@ -465,8 +448,8 @@
                             </div>
                             <div
                                 class="col-lg-5 mt_12 col-12 d-flex flex-column justify-content-center align-items-center-lg">
-                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Manage Your <span
-                                        class="text-color">Customer Queues</span>
+                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Gain visibility into your <span
+                                        class="text-color">stock on hand</span>
                                 </h1>
                                 <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
                                     designed to
@@ -503,22 +486,13 @@
                                         class="text-color">Customer
                                         Queues</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
-                                    designed to
-                                    allow
-                                    your customers to sign up for walk-in appointments and select
-                                    the services they want ahead of time. The queue will provide them with estimated
-                                    wait times, costs and will allow them
-                                    to even select their preferred stylist.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is designed to allow your customers to sign up for walk-in appointments and select
+                                the services they want ahead of time. The queue will provide them with estimated wait times, costs and will allow them
+                                to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
-                                    or smaller, its
-                                    easy to
-                                    monitor
-                                    your operations and understand when wait periods are getting
-                                    too long to service your customer base and to better resource your stores during
-                                    busy periods. Beat the frustration of
-                                    your customers ahead of time and help manage how they wait for your services
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its easy to monitor your operations and understand when wait periods are getting
+                                too long to service your customer base and to better resource your stores during busy periods. Beat the frustration of
+                                your customers ahead of time and help manage how they wait for your services
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
