--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
         <h1 class=" white fs-80 fw-8 text-center">Maitre D...</h1>
     </section>
+
     <header class="bg-img min-vh-100 d-flex flex-column ">
         <nav>
             <div class="container pt-20 position-relative">
@@ -129,7 +130,7 @@
 
         <!--------- Features ------------>
 
-        <section class="bg-img-2 pt_217 position-relative" id="features">
+        <section class="bg-img-2 pt_217 lg_pt_100 position-relative" id="features">
             <div class="feature-box">
                 <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
             </div>
@@ -347,13 +348,18 @@
                                 <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Understand your
                                     <span class="text-color">Customers</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D Timesheet system is designed to allow your employees to accurately record their working time for the day
-                                against jobs or tasks. This data is recorded down to the minute to allow for the most accurate information to provide
-                                your payroll provider, review performance, or maximize utilization.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D Timesheet system is designed
+                                    to allow your employees to accurately record their working time for the day
+                                    against jobs or tasks. This data is recorded down to the minute to allow for the
+                                    most accurate information to provide
+                                    your payroll provider, review performance, or maximize utilization.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">Accurate timesheet entry and data is critical to understanding your labor costs, requirements, and efficiencies to
-                                better run your business. Start making it easier for your staff to record their time so Maitre D can make it easier to
-                                manage your staff.
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">Accurate timesheet entry
+                                    and data is critical to understanding your labor costs, requirements, and
+                                    efficiencies to
+                                    better run your business. Start making it easier for your staff to record their time
+                                    so Maitre D can make it easier to
+                                    manage your staff.
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
@@ -448,8 +454,8 @@
                             </div>
                             <div
                                 class="col-lg-5 mt_12 col-12 d-flex flex-column justify-content-center align-items-center-lg">
-                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Gain visibility into your <span
-                                        class="text-color">stock on hand</span>
+                                <h1 class="fw-7 fs-24 lh-36 letter-spacing mt-9 md-fs-36 text_center">Gain visibility
+                                    into your <span class="text-color">stock on hand</span>
                                 </h1>
                                 <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
                                     designed to
@@ -486,13 +492,18 @@
                                         class="text-color">Customer
                                         Queues</span>
                                 </h1>
-                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is designed to allow your customers to sign up for walk-in appointments and select
-                                the services they want ahead of time. The queue will provide them with estimated wait times, costs and will allow them
-                                to even select their preferred stylist.
+                                <p class="fs-16 fw-4 lh-24 mt_12 text_center">The Maitre D queue management system is
+                                    designed to allow your customers to sign up for walk-in appointments and select
+                                    the services they want ahead of time. The queue will provide them with estimated
+                                    wait times, costs and will allow them
+                                    to even select their preferred stylist.
                                 </p>
-                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger or smaller, its easy to monitor your operations and understand when wait periods are getting
-                                too long to service your customer base and to better resource your stores during busy periods. Beat the frustration of
-                                your customers ahead of time and help manage how they wait for your services
+                                <p class="fs-16 fw-4 lh-24 mt_21 text_center d-lg-block d-none">As the queue gets bigger
+                                    or smaller, its easy to monitor your operations and understand when wait periods are
+                                    getting
+                                    too long to service your customer base and to better resource your stores during
+                                    busy periods. Beat the frustration of
+                                    your customers ahead of time and help manage how they wait for your services
                                 </p>
                                 <div class="d-flex"> <button class="submit-btn mt_25 text-white fs-20 fw-7 lh-23">Buy
                                         Now</button>
@@ -777,7 +788,7 @@
 
 
         <!------ contact-us ------->
-        <section class="pt_368" id="contact">
+        <section class="pt_368 lg_pt_100" id="contact">
             <div class="container position-relative">
                 <div class="contact-blue-box">
                     <img src="./assets/img/png/purpel-box.png" alt="purpel-box">
