make cross icon in nav bar

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                         <h3 class="fw-4 fs-24 lh-27 m-0">maître d</h3>
                     </div>
                     <label for="menuicon" class="check">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                        <span class="first-line"></span>
+                        <span class="sec-line"></span>
+                        <span class="third-line"></span>
                     </label>
                     <div class="gap-46 d-flex">
                         <div class="d-flex gap-46 lg-screen">
@@ -802,7 +802,7 @@
                         <h2 class="fw-7 fs-40 lh-45 letter-spacing mt-9">Get in touch!</h2>
                         <div class="d-flex align-items-center justify-content-between">
                             <input type="text" placeholder="Full Name" class="w-48 input fw-4 fs-16 lh-18 pb-3">
-                            <input type="text" placeholder="Email Address" class="w-48 input fw-4 fs-16 lh-18 pb-3">
+                            <input type="email" placeholder="Email Address" class="w-48 input fw-4 fs-16 lh-18 pb-3">
                         </div>
                         <input type="text" placeholder="Company Name" class="w-100 input-1 fw-4 fs-16 lh-18 mt_29 pb-3">
                         <textarea cols="20" rows="5" class="w-100 bdr_out fw-4 fs-16 lh-18 mt-4"
